--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -10,23 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
+    - name: Set up SSH agent
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Deploy to VPS
-        run: |
-          ssh -o StrictHostKeyChecking=no root@157.173.222.223 << 'EOF'
-          cd /root/test-applicaion/ph-testy-app/ph-testy-treat-client
-          git pull origin main
-          npm install
-          npm run build
-          rm -rf /var/www/html/my-app
-          mkdir -p /var/www/html/my-app
-          cp -r dist/* /var/www/html/my-app
-          pm2 restart all
-          EOF
+    - name: Add GitHub to known hosts
+      run: |
+        mkdir -p ~/.ssh
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+    - name: Test SSH connection
+      run: |
+        ssh -T git@github.com
+
+    - name: Deploy
+      run: |
+        # Your deployment script here
