--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -8,16 +8,16 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup SSH key
+      - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
       - name: Deploy to VPS
         run: |
-          ssh -o StrictHostKeyChecking=no root@157.173.222.223 'bash -s' < deploy.sh
+          scp -o StrictHostKeyChecking=no deploy.sh root@157.173.222.223:/root/
+          ssh -o StrictHostKeyChecking=no root@157.173.222.223 'bash /root/deploy.sh'
