--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -17,7 +17,9 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
-      - name: Deploy to VPS
+      - name: Upload deploy script
+        run: scp -o StrictHostKeyChecking=no deploy.sh root@157.173.222.223:/root/
+
+      - name: Run deploy script
         run: |
-          scp -o StrictHostKeyChecking=no deploy.sh root@157.173.222.223:/root/
           ssh -o StrictHostKeyChecking=no root@157.173.222.223 'bash /root/deploy.sh'
