--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -23,11 +23,10 @@ jobs:
       - name: Run deployment commands
         run: |
           ssh -o StrictHostKeyChecking=no root@157.173.222.223 << 'EOF'
+          set -e  # Exit immediately if a command exits with a non-zero status
           cd /root/test-applicaion/ph-testy-app/ph-testy-treat-client/
-          # Assuming you have a script or command to build/start your application
-          # Replace the following line with your actual deployment commands
           npm install
           npm run build
-          # If you need to start or restart a service, use commands here
-          # e.g., pm2 restart all or another command specific to your setup
+          # Restart services or perform other deployment tasks if needed
+          # Example: pm2 restart all
           EOF
