--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -23,10 +23,8 @@ jobs:
       - name: Run deployment commands
         run: |
           ssh -o StrictHostKeyChecking=no root@157.173.222.223 << 'EOF'
-          set -e  # Exit immediately if a command exits with a non-zero status
+          export PATH=$PATH:/root/.nvm/versions/node/v22.5.1/bin
           cd /root/test-applicaion/ph-testy-app/ph-testy-treat-client/
           npm install
           npm run build
-          # Restart services or perform other deployment tasks if needed
-          # Example: pm2 restart all
           EOF
