--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -8,14 +8,11 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: ph-client  # Specify the environment here
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22.x'  # Match this to your VPS Node.js version
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
@@ -25,10 +22,22 @@ jobs:
       - name: Upload deployment files
         run: scp -o StrictHostKeyChecking=no -r ./* root@157.173.222.223:/root/test-applicaion/ph-testy-app/ph-testy-treat-client/
 
+      - name: Create .env file on VPS
+        run: |
+          ssh -o StrictHostKeyChecking=no root@157.173.222.223 << 'EOF'
+          echo "VITE_BASEURL=${{ secrets.VITE_BASEURL }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_APIKEY=${{ secrets.VITE_APIKEY }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_AUTHDOMAIN=${{ secrets.VITE_AUTHDOMAIN }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_PROJECTID=${{ secrets.VITE_PROJECTID }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_STORAGEBUCKET=${{ secrets.VITE_STORAGEBUCKET }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_MESSAGINGSENDERID=${{ secrets.VITE_MESSAGINGSENDERID }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_APPID=${{ secrets.VITE_APPID }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_MEASUREMENTID=${{ secrets.VITE_MEASUREMENTID }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          EOF
+
       - name: Run deployment commands
         run: |
           ssh -o StrictHostKeyChecking=no root@157.173.222.223 << 'EOF'
-          export PATH=/root/.nvm/versions/node/v22.5.1/bin:$PATH
           cd /root/test-applicaion/ph-testy-app/ph-testy-treat-client/
           npm install
           npm run build
