github pipeline throw deploy application

--- a/ph-testy-treat-client/.env
+++ b/ph-testy-treat-client/.env
@@ -1,4 +1,4 @@
-VITE_BASEURL=https://phserver.brandbite.digital
+VITE_BASEURL=https://api.brandbite.digital
 # VITE_BASEURL=http://localhost:3000
 VITE_APIKEY=AIzaSyAiiC0e6dRHrF0cdl1I4kUw9skXjnv1hkA
 VITE_AUTHDOMAIN=ph-testy-treat.firebaseapp.com
