--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: ph-client  # Specify the environment here
 
     steps:
       - name: Checkout code
@@ -35,3 +36,14 @@ jobs:
           npm install
           npm run build
           EOF
+          echo "Deployment completed successfully."
+
+      - name: Use environment variables
+        run: |
+          echo "VITE_STORAGEBUCKET is: ${{ secrets.VITE_STORAGEBUCKET }}"
+          echo "VITE_PROJECTID is: ${{ secrets.VITE_PROJECTID }}"
+          echo "VITE_MESSAGINGSENDERID is: ${{ secrets.VITE_MESSAGINGSENDERID }}"
+          echo "VITE_BASEURL is: ${{ secrets.VITE_BASEURL }}"
+          echo "VITE_AUTHDOMAIN is: ${{ secrets.VITE_AUTHDOMAIN }}"
+          echo "VITE_APPID is: ${{ secrets.VITE_APPID }}"
+          echo "VITE_APIKEY is: ${{ secrets.VITE_APIKEY }}"
