--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ VITE_STORAGEBUCKET=ph-testy-treat.appspot.com
 VITE_MESSAGINGSENDERID=287377549766
 VITE_APPID=1:287377549766:web:a08fe545b431c246c9aac7
 VITE_MEASUREMENTID=G-VQGXGJTLM5
+VITE_IMAGE_KEY=d7ead721cbf8b9f26582610dbe5c5dca
