--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,14 +1,14 @@
-name: Deploy Backend to VPS
+name: Deploy to VPS
 
 on:
   push:
     branches:
-      - main  # Adjust this to your deployment branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: backend  # Specify the environment here
+    environment: ph-client  # Specify the environment here
 
     steps:
       - name: Checkout code
@@ -17,44 +17,34 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'  # Adjust this to your Node.js version
+          node-version: '22.x'  # Match this to your VPS Node.js version
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
-      - name: Delete existing files on server
-        run: |
-          ssh -o StrictHostKeyChecking=no root@157.173.222.223 << 'EOF'
-          rm -rf ~/test-applicaion/ph-testy-app/ph-testy-treat-server/*
-          EOF
-
       - name: Upload deployment files
-        run: |
-          scp -o StrictHostKeyChecking=no -r ./* root@157.173.222.223:~/test-applicaion/ph-testy-app/ph-testy-treat-server/
+        run: scp -o StrictHostKeyChecking=no -r ./* root@157.173.222.223:/root/test-applicaion/ph-testy-app/ph-testy-treat-client/
 
-      - name: Create .env file on server
-        env:
-          DBNAME: ${{ secrets.DBNAME }}
-          DBPASS: ${{ secrets.DBPASS }}
-          SECRET_ACCESS_TOKEN: ${{ secrets.SECRET_ACCESS_TOKEN }}
-          URI: ${{ secrets.MONGODB_URI }}
-          PORT: ${{ secrets.PORT }}
+      - name: Create .env file on VPS
         run: |
           ssh -o StrictHostKeyChecking=no root@157.173.222.223 << 'EOF'
-          echo "DBNAME=$DBNAME" > ~/test-applicaion/ph-testy-app/ph-testy-treat-server/.env
-          echo "DBPASS=$DBPASS" >> ~/test-applicaion/ph-testy-app/ph-testy-treat-server/.env
-          echo "SECRET_ACCESS_TOKEN=$SECRET_ACCESS_TOKEN" >> ~/test-applicaion/ph-testy-app/ph-testy-treat-server/.env
-          echo "URI=$URI" >> ~/test-applicaion/ph-testy-app/ph-testy-treat-server/.env
-          echo "PORT=$PORT" >> ~/test-applicaion/ph-testy-app/ph-testy-treat-server/.env
+          echo "VITE_BASEURL=${{ secrets.VITE_BASEURL }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_APIKEY=${{ secrets.VITE_APIKEY }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_AUTHDOMAIN=${{ secrets.VITE_AUTHDOMAIN }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_PROJECTID=${{ secrets.VITE_PROJECTID }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_STORAGEBUCKET=${{ secrets.VITE_STORAGEBUCKET }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_MESSAGINGSENDERID=${{ secrets.VITE_MESSAGINGSENDERID }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_APPID=${{ secrets.VITE_APPID }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
+          echo "VITE_MEASUREMENTID=${{ secrets.VITE_MEASUREMENTID }}" >> /root/test-applicaion/ph-testy-app/ph-testy-treat-client/.env
           EOF
 
       - name: Run deployment commands
         run: |
           ssh -o StrictHostKeyChecking=no root@157.173.222.223 << 'EOF'
           export PATH=/root/.nvm/versions/node/v22.5.1/bin:$PATH
-          cd ~/test-applicaion/ph-testy-app/ph-testy-treat-server/
+          cd /root/test-applicaion/ph-testy-app/ph-testy-treat-client/
           npm install
-          pm2 reload all  # Or pm2 restart all, depending on your setup
+          npm run build
           EOF
